# Sunscreen

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  Tables_of_things.md  package-lock.json  purge-github-caches.sh
benchmarks/bfv_zkp/: Cargo.toml
benchmarks/bfv_zkp/src/: bfv.rs  main.rs  poly_ring.rs
benchmarks/cannonical_norm_noise_model/: Cargo.toml  Results.csv
benchmarks/cannonical_norm_noise_model/src/: main.rs  ops.rs
emsdk/: Cargo.toml  build.rs  crates-io.md
emsdk/src/: lib.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs  rational.rs
examples/debugger/: Cargo.toml
examples/debugger/src/: main.rs
examples/simple_multiply/: Cargo.toml
examples/simple_multiply/src/: main.rs
examples/zkp_debugger/: Cargo.toml
examples/zkp_debugger/src/: main.rs
fhe-debugger/: Cargo.toml  build.rs
fhe-debugger/fhe-debugger-frontend/: package.json  tsconfig.json
fhe-debugger/fhe-debugger-frontend/src/: App.css  App.tsx
fhe-debugger/src/: callstack.rs  groups.rs  main.rs  nodes.rs  sessions.rs
logproof/: Cargo.toml  sdlp-changes.tex
logproof/benches/: linear_relation.rs
logproof/src/: assertions.rs  bfv_statement.rs  crypto.rs  error.rs  fields.rs  generators.rs  inner_product.rs  lib.rs  linear_algebra.rs  linear_relation.rs  math.rs  rings.rs  statement.rs  test.rs  transcript.rs
logproof/src/tfhe_statement/: glwe.rs  mod.rs
logproof/tests/: seal.rs
logproof/utils/: compute_params.py
seal/: Cargo.toml  __bindgen.cpp  __bindgen.ii  bindgen.h  bindgen_wrapper.h  build.rs
seal/src/: bfv_evaluator.rs  context.rs  encoder.rs  encryption_parameters.rs  encryptor_decryptor.rs  error.rs  evaluator.rs  key_generator.rs  lib.rs  modulus.rs  plaintext_ciphertext.rs
seal/tests/: assumptions.rs  test_common.rs
seal_fhe/: Cargo.toml  bindgen_wrapper.h  build.rs  crates-io.md
seal_fhe/src/: bfv_evaluator.rs  context.rs  data_structures.rs  encoder.rs  encryption_parameters.rs  encryptor_decryptor.rs  error.rs  evaluator_base.rs  key_generator.rs  lib.rs  modulus.rs  plaintext_ciphertext.rs
seal_fhe/tests/: assumptions.rs  test_common.rs
sunscreen/: Cargo.toml  crates-io.md
sunscreen/benches/: fractional_range_proof.rs  libs.rs  smart_fhe.rs
sunscreen/docs/: linked.md
sunscreen/src/: compiler.rs  error.rs  fhe_compiler.rs  lib.rs  linked.rs  params.rs  zkp_compiler.rs
sunscreen/src/fhe/: mod.rs
sunscreen/src/types/: mod.rs
sunscreen/src/zkp/: mod.rs
sunscreen/tests/: array.rs  chaining.rs  edge_cases.rs  encrypt_decrypt.rs  features.rs  fhe_program_tests.rs  fractional.rs  linked.rs  multi_program.rs  rational.rs  sdlp.rs  signed.rs  simd.rs  typename_tests.rs  unsigned.rs  zkp_program_tests.rs
sunscreen_backend/: Cargo.toml  crates-io.md
sunscreen_backend/src/: error.rs  lib.rs
sunscreen_backend/src/noise_model/: canonical_embedding_norm.rs  measured_model.rs  mod.rs
sunscreen_backend/src/transforms/: insert_relinearizations.rs  mod.rs
sunscreen_bulletproofs_backend/: Cargo.toml
sunscreen_compiler/: Cargo.toml
sunscreen_compiler/src/: compiler.rs  error.rs  lib.rs  params.rs
sunscreen_compiler/src/transforms/: insert_relinearizations.rs  mod.rs
sunscreen_compiler/src/types/: fractional.rs  integer.rs  (+2 more)
sunscreen_compiler/tests/: circuit_compilation.rs  edge_cases.rs  encrypt_decrypt.rs  fractional.rs  rational.rs  signed.rs  simd.rs  typename_tests.rs  types.rs  unsigned.rs
sunscreen_compiler_common/: Cargo.toml
sunscreen_compiler_common/src/: context.rs  graph.rs  lib.rs  lookup.rs
sunscreen_compiler_macros/: Cargo.toml
sunscreen_compiler_macros/src/: attr_parsing.rs  circuit.rs  debug.rs  debug_program.rs  decrypt.rs  encrypt.rs  error.rs  fhe_program.rs  fhe_program_transforms.rs  lib.rs  type_name.rs  zkp_program.rs
sunscreen_compiler_macros/tests/: circuit_tests.rs  decrypt.rs  encrypt_decrypt.rs  fhe_program_tests.rs  typename_tests.rs
sunscreen_compiler_macros_common/: Cargo.toml
sunscreen_compiler_macros_common/src/: lib.rs  type_name.rs
sunscreen_fhe_program/: Cargo.toml
sunscreen_fhe_program/src/: error.rs  lib.rs  literal.rs  operation.rs  traversal.rs  validation.rs
sunscreen_frontend/: Cargo.toml
sunscreen_frontend/src/: lib.rs
sunscreen_frontend/tests/: circuit_compilation.rs
sunscreen_frontend_macros/: Cargo.toml
sunscreen_frontend_macros/src/: error.rs  lib.rs
sunscreen_frontend_macros/tests/: circuit_tests.rs  macro_tests.rs
sunscreen_frontend_types/: Cargo.toml
sunscreen_frontend_types/src/: compiler.rs  error.rs  lib.rs  params.rs  types.rs
sunscreen_math/: Cargo.toml  build.rs  crates-io.md
sunscreen_math/benches/: cpu.rs  gpu.rs
sunscreen_math/src/: combination.rs  cpu.rs  error.rs  geometry.rs  lib.rs  misc_traits.rs  pina.rs  ring.rs  security.rs  stats.rs  test_impl.rs
sunscreen_math_macros/: Cargo.toml
sunscreen_math_macros/src/: lib.rs
sunscreen_runtime/: Cargo.toml
sunscreen_runtime/debugger-frontend/: craco.config.js  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
sunscreen_runtime/fhe-debugger-frontend/: craco.config.js  package-lock.json  package.json  webpack.config.js
sunscreen_runtime/src/: args.rs  array.rs  builder.rs  error.rs  keys.rs  lib.rs  linked.rs  metadata.rs  run.rs  runtime.rs  sdlp.rs  serialization.rs  sessions.rs  zkp.rs
sunscreen_runtime/tests/: serialization.rs
sunscreen_tfhe/: Cargo.toml  barrett.py  mont.py
sunscreen_tfhe/benches/: fft.rs  ops.rs  tfhe_proof.rs
sunscreen_tfhe/images/: circuit_bootstrapping.graffle
sunscreen_tfhe/notes/: glwe_scheme_switching.md  leveled_computation.md
sunscreen_tfhe/src/: dst.rs  error.rs  high_level.rs  lib.rs  macros.rs  params.rs  rand.rs  scratch.rs  zkp.rs
sunscreen_tfhe/tests/: cmux_tree.rs
sunscreen_zkp_backend/: Cargo.toml
sunscreen_zkp_backend/src/: bulletproofs.rs  error.rs  exec.rs  jit.rs  lib.rs
sunscreen_zkp_compiler/: Cargo.toml
sunscreen_zkp_compiler/src/: lib.rs
sunscreen_zkp_compiler_macros/: Cargo.toml
sunscreen_zkp_compiler_macros/src/: error.rs  lib.rs  zkp_program.rs
(+489 files in other folders)
