[workspace]
resolver = '2'
members = [
    "benchmarks/bfv_zkp",
    "benchmarks/cannonical_norm_noise_model",
    "emsdk",
    "examples/*",
    "logproof",
    "seal_fhe",
    "sunscreen",
    "sunscreen_backend",
    "sunscreen_bulletproofs",
    "sunscreen_compiler_common",
    "sunscreen_compiler_macros",
    "sunscreen_curve25519",
    "sunscreen_fhe_program",
    "sunscreen_math",
    "sunscreen_math_macros",
    "sunscreen_runtime",
    "sunscreen_compiler_common",
    "sunscreen_zkp_backend",
]
exclude = [
    "mdBook",
    "rust-playground",
    "examples/allowlist_zkp",
    "examples/private_tx_linkedproof",
]

[profile.release]
split-debuginfo = "packed"
debug = true

[workspace.dependencies]
bytemuck = "1.13.0"
lazy_static = "1.4.0"
metal = "0.26.0"
rand = "0.8.5"
rayon = "1.6.1"
ocl = "0.19.4"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["rt"] }
wgpu = "0.17.0"
cust = "0.3.2"
num = "0.4.1"
crypto-bigint = "0.5.2"
paste = "1.0.14"
thiserror = "1.0.44"
naga = { version = "0.13.0", features = ["wgsl-in"] }
wgpu-core = { version = "0.17.0", features = ["vulkan", "wgsl"] }
find_cuda_helper = "0.2.0"
criterion = { version = "0.5.1", default-features = false }
darling = "0.20.3"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["full"] }
petgraph = { version = "0.6.0", features = ["serde-1"] }
serde = { version = "1.0.147", features = ["derive"] }
static_assertions = "1.1.0"
serde_json = "1.0.74"
semver = "1.0.14"
crossbeam = "0.8.1"
log = "0.4.14"
env_logger = "0.10.0"
bumpalo = "3.8.0"
subtle = "2.4.1"
bincode = "1.3.3"
float-cmp = "0.9.0"
proptest = "1.1.0"
merlin = "3.0.0"
ark-poly = "0.4.0"
ark-ff = "0.4.0"
bitvec = "1.0.1"
sha3 = "0.10.5"
digest = "0.10.5"
link-cplusplus = "1.0.9"
cmake = "0.1.46"
bindgen = "0.66.1"
once_cell = "1.18.0"
num_cpus = "1.16.0"
rlp = "0.5.2"
fs_extra = "1.2.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
rand_distr = "0.4.3"

curve25519-dalek = { version = "0.8.1", package = "sunscreen_curve25519", path = "./sunscreen_curve25519", features = [
    "serde",
    "u64_backend",
    "alloc",
], default-features = false }
bulletproofs = { version = "0.8.1", path = "./sunscreen_bulletproofs", package = "sunscreen_bulletproofs", features = [
    "yoloproofs",
] }
emsdk = { version = "^0.1", path = "./emsdk" }
sunscreen = { version = "0.8.1", path = "./sunscreen", features = [
    "bulletproofs",
] }
sunscreen_compiler_macros = { version = "0.8.1", path = "./sunscreen_compiler_macros" }
sunscreen_backend = { version = "0.8.1", path = "./sunscreen_backend" }
sunscreen_zkp_backend = { version = "0.8.1", path = "./sunscreen_zkp_backend" }
sunscreen_fhe_program = { version = "0.8.1", path = "./sunscreen_fhe_program" }
sunscreen_runtime = { version = "0.8.1", path = "./sunscreen_runtime" }
sunscreen_compiler_common = { version = "0.8.1", path = "./sunscreen_compiler_common" }
sunscreen_math = { version = "0.8.1", path = "./sunscreen_math" }
sunscreen_math_macros = { version = "0.8.1", path = "./sunscreen_math_macros" }
seal_fhe = { version = "0.8.1", path = "./seal_fhe" }
logproof = { version = "0.8.1", path = "./logproof" }
