[workspace]
resolver = '2'
members = [
    "benchmarks/bfv_zkp",
    "benchmarks/cannonical_norm_noise_model",
    "emsdk",
    "examples/*",
    "logproof",
    "seal_fhe",
    "sunscreen",
    "sunscreen_backend",
    "sunscreen_bulletproofs",
    "sunscreen_compiler_common",
    "sunscreen_compiler_macros",
    "sunscreen_curve25519",
    "sunscreen_fhe_program",
    "sunscreen_math",
    "sunscreen_math_macros",
    "sunscreen_runtime",
    "sunscreen_tfhe",
    "sunscreen_zkp_backend",
]
exclude = ["mdBook", "rust-playground"]

[profile.release]
split-debuginfo = "packed"
debug = true
lto = "fat"
codegen-units = 1

[profile.bench]
lto = "fat"
codegen-units = 1

[profile.mdbook]
inherits = "release"
lto = false
codegen-units = 16

[workspace.dependencies]
aligned-vec = { version = "0.6", features = ["serde"] }
bytemuck = "1"
raw-cpuid = "11"
lazy_static = "1"
metal = "0.30"
rand = "0.8"
rayon = "1"
ocl = "0.19"
futures = "0.3"
tokio = { version = "1.25", features = ["rt"] }
wgpu = "23"
cust = "0.3"
num = "0.4"
crypto-bigint = { version = "0.5.2", features = ["serde"] }
paste = "1"
thiserror = "2"
naga = { version = "23", features = ["wgsl-in"] }
wgpu-core = { version = "23", features = ["vulkan", "wgsl"] }
find_cuda_helper = "0.2"
criterion = { version = "0.5", default-features = false }
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
petgraph = { version = "0.7", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
static_assertions = "1"
serde_json = "1"
semver = "1"
crossbeam = "0.8"
log = "0.4"
env_logger = "0.11"
bumpalo = "3"
subtle = "2"
bincode = "1"
float-cmp = "0.10"
proptest = "1"
merlin = "3"
ark-poly = "0.5"
ark-ff = "0.5"
bitvec = "1"
sha3 = "0.10"
digest = "0.10"
link-cplusplus = "1.0"
cmake = "0.1"
bindgen = "0.71"
once_cell = "1"
rlp = "0.6"
fs_extra = "1.2"
reqwest = { version = "0.12", features = ["blocking"] }
rand_distr = "0.4"
statrs = "0.18"

curve25519-dalek = { version = "0.8.1", package = "sunscreen_curve25519", path = "./sunscreen_curve25519", features = [
    "serde",
    "u64_backend",
    "alloc",
], default-features = false }
bulletproofs = { version = "0.8.1", path = "./sunscreen_bulletproofs", package = "sunscreen_bulletproofs", features = [
    "yoloproofs",
] }
emsdk = { version = "^0.1", path = "./emsdk" }
sunscreen = { version = "0.8.1", path = "./sunscreen", features = [
    "bulletproofs",
] }
sunscreen_compiler_macros = { version = "0.8.1", path = "./sunscreen_compiler_macros" }
sunscreen_backend = { version = "0.8.1", path = "./sunscreen_backend" }
sunscreen_zkp_backend = { version = "0.8.1", path = "./sunscreen_zkp_backend" }
sunscreen_fhe_program = { version = "0.8.1", path = "./sunscreen_fhe_program" }
sunscreen_runtime = { version = "0.8.1", path = "./sunscreen_runtime" }
sunscreen_compiler_common = { version = "0.8.1", path = "./sunscreen_compiler_common" }
sunscreen_math = { version = "0.8.1", path = "./sunscreen_math" }
sunscreen_math_macros = { version = "0.8.1", path = "./sunscreen_math_macros" }
seal_fhe = { version = "0.8.1", path = "./seal_fhe" }
logproof = { version = "0.8.1", path = "./logproof" }
