[package]
name = "fhe-debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
rand = "0.8.5"
sunscreen = {path = "../sunscreen"}
mime = "0.3.17"
env_logger = "0.10.0"
radix_trie = "0.2.1"
backtrace = "0.3"
futures = "0.3.28"
petgraph = "0.6.3"
log = "0.4.14"
seal_fhe = { version = "0.7", path = "../seal_fhe" }
sunscreen_compiler_common = {path = "../sunscreen_compiler_common"}
sunscreen_fhe_program = {path = "../sunscreen_fhe_program"}
sunscreen_zkp_backend = { path = "../sunscreen_zkp_backend" }
sunscreen_runtime = { path = "../sunscreen_runtime"}

[build-dependencies]
copy_dir = "0.1.2"

[features]
debugger = []