[package]
name = "logproof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly = { workspace = true }
ark-ff = { workspace = true }
bitvec = { workspace = true }
curve25519-dalek = { workspace = true }
merlin = { workspace = true }
sha3 = { workspace = true }
digest = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
sunscreen_math = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
criterion = { workspace = true }
once_cell = { workspace = true }
seal_fhe = { path = "../seal_fhe" }

[features]
default = []
cuda = ["sunscreen_math/cuda"]
opencl = ["sunscreen_math/opencl"]
metal = ["sunscreen_math/metal"]
pina = ["sunscreen_math/pina"]

[[bench]]
name = "linear_relation"
harness = false
