[package]
name = "logproof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly = "0.4.0"
ark-ff = "0.4.0"
bitvec = "1.0.1"
curve25519-dalek = { path = "../sunscreen_curve25519", package = "sunscreen_curve25519", default-features = false, features = ["u64_backend", "serde", "alloc"] }
merlin = "3.0.0"
sha3 = "0.10.5"
digest = "0.10.5"
rand = "0.8.5"
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
sunscreen_math = { path = "../sunscreen_math" }

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.4.0"
once_cell = "1.18.0"
seal_fhe = { path = "../seal_fhe" }

[features]
default = []
cuda = ["sunscreen_math/cuda"]
opencl = ["sunscreen_math/opencl"]
metal = ["sunscreen_math/metal"]
pina = ["sunscreen_math/pina"]

[[bench]]
name = "linear_relation"
harness = false
