[package]
name = "logproof"
version = "0.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { workspace = true }
crypto-bigint = { workspace = true }
curve25519-dalek = { workspace = true }
log = { workspace = true }
merlin = { workspace = true }
sha3 = { workspace = true }
digest = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
sunscreen_math = { workspace = true }
seal_fhe = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
criterion = { workspace = true }
once_cell = { workspace = true }

[features]
default = []
cuda = ["sunscreen_math/cuda"]
opencl = ["sunscreen_math/opencl"]
metal = ["sunscreen_math/metal"]
pina = ["sunscreen_math/pina"]

[[bench]]
name = "linear_relation"
harness = false
