[package]
name = "seal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
link-cplusplus="1.0.5"
serde={ version = "1.0.130", features = ["derive"] }

[build-dependencies]
cmake="0.1.46"
bindgen="0.59.1"

[dev-dependencies]
serde_json="1.0.69"