[package]
name = "seal"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={ version = "1.0.130", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
link-cplusplus="1.0.5"

[build-dependencies]
cmake="0.1.46"
bindgen="0.59.1"
#emsdk = { version = "^0.1", path = "../emsdk" }

[dev-dependencies]
serde_json="1.0.69"

[features]
hexl = []