[package]
name = "seal_fhe"
version = "0.7.0"
edition = "2021"

authors = ["Sunscreen LLC"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "This crate contains Rust bindings for Microsoft's SEAL Fully Homomorphic Encryption (FHE) library."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={ version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
static_assertions = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
link-cplusplus="1.0.5"

[build-dependencies]
cmake="0.1.46"
bindgen="0.61.0"
emsdk = { version = "^0.1", path = "../emsdk" }

[dev-dependencies]
serde_json="1.0.74"

[features]
hexl = []
