[package]
name = "seal_fhe"
version = "0.8.1"
edition = "2021"

authors = ["Sunscreen LLC"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "This crate contains Rust bindings for Microsoft's SEAL Fully Homomorphic Encryption (FHE) library."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
static_assertions = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
link-cplusplus = { workspace = true }

[build-dependencies]
cmake = { workspace = true }
bindgen = { workspace = true }
emsdk = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
hexl = []
transparent-ciphertexts = []
deterministic = []
insecure-params = []
