[package]
name = "sunscreen"
# Read and understand
# https://doc.rust-lang.org/cargo/reference/semver.html
# before bumping the version.
version = "0.6.0"
edition = "2021"

authors = ["Sunscreen"]
rust-version = "1.60.0"
license = "AGPL-3.0-only"
description = "A Fully Homomorphic Encryption (FHE) compiler supporting the Brakerski/Fan-Vercauteren (BFV) scheme."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech/sunscreen"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.8.0"
clap = "2.34.0"
log = "0.4.14"
num = "0.4.0"
petgraph = "0.6.0"
sunscreen_compiler_macros = { version = "0.6", path = "../sunscreen_compiler_macros" }
sunscreen_backend = { version = "0.6", path = "../sunscreen_backend" }
sunscreen_fhe_program = { version = "0.6", path = "../sunscreen_fhe_program" }
sunscreen_runtime = { version = "0.6", path = "../sunscreen_runtime" }
seal_fhe = { version = "0.6", path = "../seal_fhe" }
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.72"
float-cmp = "0.9.0"

[features]
hexl = ["seal_fhe/hexl"]