[package]
name = "sunscreen"
# Read and understand
# https://doc.rust-lang.org/cargo/reference/semver.html
# before bumping the version.
version = "0.7.0"
edition = "2021"

authors = ["Sunscreen"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "A Fully Homomorphic Encryption (FHE) compiler supporting the Brakerski/Fan-Vercauteren (BFV) scheme."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.8.0"
crypto-bigint = "0.4.9"
log = "0.4.14"
num = "0.4.0"
petgraph = "0.6.0"
sunscreen_compiler_common = { path = "../sunscreen_compiler_common" }
sunscreen_compiler_macros = { version = "0.7", path = "../sunscreen_compiler_macros" }
sunscreen_backend = { version = "0.7", path = "../sunscreen_backend" }
sunscreen_fhe_program = { version = "0.7", path = "../sunscreen_fhe_program" }
sunscreen_runtime = { version = "0.7", path = "../sunscreen_runtime" }
sunscreen_zkp_backend = { path = "../sunscreen_zkp_backend" }
seal_fhe = { version = "0.7", path = "../seal_fhe" }
serde = { version = "1.0.147", features = ["derive"] }
subtle = "2.4.1"
static_assertions = "1.1.0"
thiserror = "1.0.37"

[dev-dependencies]
curve25519-dalek = { path = "../sunscreen_curve25519", package = "sunscreen_curve25519" }
bulletproofs = { path = "../sunscreen_bulletproofs", package = "sunscreen_bulletproofs" }
criterion = "0.4.0"
sunscreen_zkp_backend = { path = "../sunscreen_zkp_backend", features = ["bulletproofs"] }
sunscreen_compiler_common = { path = "../sunscreen_compiler_common" }
serde_json = "1.0.74"
float-cmp = "0.9.0"

[features]
bulletproofs = ["sunscreen_zkp_backend/bulletproofs"]
hexl = ["seal_fhe/hexl"]

[[bench]]
name = "fractional_range_proof"
harness = false