[package]
name = "sunscreen"
# Read and understand
# https://doc.rust-lang.org/cargo/reference/semver.html
# before bumping the version.
version = "0.7.0"
edition = "2021"

authors = ["Sunscreen"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "A Fully Homomorphic Encryption (FHE) compiler supporting the Brakerski/Fan-Vercauteren (BFV) scheme."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"

# Load the playground with all relevant features
[package.metadata.playground]
features = ["bulletproofs"]

[dependencies]
bumpalo = { workspace = true }
crypto-bigint = { workspace = true }
log = { workspace = true }
num = { workspace = true }
paste = { workspace = true }
petgraph = { workspace = true }
sunscreen_compiler_common = { workspace = true }
sunscreen_compiler_macros = { workspace = true }
sunscreen_backend = { workspace = true }
sunscreen_fhe_program = { workspace = true }
sunscreen_runtime = { workspace = true }
sunscreen_zkp_backend = { workspace = true }
seal_fhe = { workspace = true }
serde = { workspace = true }
subtle = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
curve25519-dalek = { workspace = true }
bulletproofs = { workspace = true }
criterion = { workspace = true }
env_logger = { workspace = true }
float-cmp = { workspace = true }
lazy_static = { workspace = true }
proptest = { workspace = true }
sunscreen_zkp_backend = { workspace = true, features = ["bulletproofs"] }
sunscreen_compiler_common = { workspace = true }
serde_json = { workspace = true }

[features]
bulletproofs = ["sunscreen_zkp_backend/bulletproofs"]
hexl = ["seal_fhe/hexl"]
transparent-ciphertexts = ["seal_fhe/transparent-ciphertexts"]
deterministic = ["seal_fhe/deterministic", "sunscreen_runtime/deterministic"]

[[bench]]
name = "fractional_range_proof"
harness = false

[[bench]]
name = "smart_fhe"
harness = false
