[package]
name = "sunscreen_backend"
version = "0.7.0"
edition = "2021"

authors = ["Sunscreen LLC"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "The backend for the Sunscreen compiler."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
seal_fhe = { version = "0.7", path = "../seal_fhe" }
sunscreen_compiler_common = { path = "../sunscreen_compiler_common" }
sunscreen_fhe_program = { version = "0.7", path = "../sunscreen_fhe_program" }
sunscreen_runtime = { version = "0.7", path = "../sunscreen_runtime" }
petgraph = "0.6.0"
log = "0.4.14"
env_logger = "0.9.0"
num = "0.4.0"
