[package]
name = "sunscreen_backend"
version = "0.8.1"
edition = "2021"

authors = ["Sunscreen"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "The backend for the Sunscreen compiler."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { workspace = true }
seal_fhe = { workspace = true }
sunscreen_compiler_common = { workspace = true }
sunscreen_fhe_program = { workspace = true }
sunscreen_runtime = { workspace = true }
petgraph = { workspace = true }
log = { workspace = true }
num = { workspace = true }
