[package]
name = "sunscreen_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.8.0"
clap = "2.34.0"
log = "0.4.14"
num = "0.4.0"
petgraph = "0.6.0"
sunscreen_compiler_macros = { path = "../sunscreen_compiler_macros" }
sunscreen_backend = { path = "../sunscreen_backend" }
sunscreen_circuit = { path = "../sunscreen_circuit" }
sunscreen_runtime = { path = "../sunscreen_runtime" }
seal = { path = "../seal" }
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.72"