[package]
name = "sunscreen_compiler_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6.2", features = ["serde-1"] }
proc-macro2 = "1.0.47"
quote = "1.0.21"
semver = "1.0.14"
serde = { version = "1.0.147", features = ["derive"] }
syn = { version = "1.0.103", features = ["full"] }
thiserror = "1.0.37"
static_assertions = "1.1.0"