[package]
name = "sunscreen_compiler_common"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = { workspace = true }
petgraph = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
static_assertions = { workspace = true }

[features]
debugger = []