[package]
name = "sunscreen_compiler_macros"
version = "0.5.0"
edition = "2021"

authors = ["Sunscreen LLC"]
rust-version = "1.60.0"
license = "AGPL-3.0-only"
description = "This crate contains macros that support the Sunscreen compiler.."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech/sunscreen"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = { version = "1.0.81", features = ["derive", "full", "fold"] }

[dev-dependencies]
serde_json = "1.0.72"
