[package]
name = "sunscreen_compiler_macros_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2  = "1.0.47"
quote = "1.0.10"
syn = { version = "1.0.81", features = ["derive", "full", "fold"] }