[package]
name = "sunscreen_fhe_program"
version = "0.7.0"
edition = "2021"

authors = ["Sunscreen"]
rust-version = "1.56.0"
license = "AGPL-3.0-only"
description = "This crate provides the data format for Sunscreen FHE programs."
homepage = "https://sunscreen.tech"
repository = "https://github.com/Sunscreen-tech/Sunscreen"
documentation = "https://docs.sunscreen.tech"
keywords = ["FHE", "BFV", "lattice", "cryptography"]
categories = ["cryptography"]
readme = "crates-io.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6.0", features = ["serde-1"] }
serde = { version = "1.0.147", features = ["derive"] }
seal_fhe = { version = "0.7", path = "../seal_fhe" }
static_assertions = "1.1.0"
sunscreen_compiler_common = { path = "../sunscreen_compiler_common" }
thiserror = "1.0.37"

[dev-dependencies]
serde_json = "1.0.74"

[features]
default = ["debugger"]
debugger = ["sunscreen_compiler_common/debugger"]