[package]
name = "sunscreen_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sunscreen_frontend_types = { path = "../sunscreen_frontend_types" }
sunscreen_frontend_macros = { path = "../sunscreen_frontend_macros" }
sunscreen_backend = {path = "../sunscreen_backend" }

[dev-dependencies]
sunscreen_runtime = { path = "../sunscreen_runtime" }
seal = { path = "../seal" }