[package]
name = "sunscreen_math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.0", optional = true }
lazy_static = "1.4.0"
metal = { version = "0.24.0", optional = true }
rand = "0.8.5"
curve25519_dalek = { package = "sunscreen_curve25519", path = "../sunscreen_curve25519", features = ["serde", "u64_backend"], default-features = false }
rayon = "1.6.1"
ocl = { version = "0.19.4", optional = true }
futures = { version = "0.3.26", optional = true }
tokio = { version = "1.25.0", features = ["rt"], optional = true }
wgpu = { version = "0.15.1", optional = true }
cust = { version = "0.3.2", optional = true }

[build-dependencies]
naga = { version = "0.11.0", optional = true, features = ["wgsl-in"]}
wgpu-core = { version = "0.15.1", optional = true, features = ["vulkan", "wgsl"] }
ocl = { version = "0.19.4", optional = true }
find_cuda_helper = { version = "0.2.0", optional = true }

[dev-dependencies]
bytemuck = { version = "1.13.0" }
criterion = "0.4.0"

[features]
default = ["opencl"]
nightly-features = []
cuda = ["dep:find_cuda_helper", "dep:cust", "gpu"]
metal = ["dep:metal", "gpu"]
webgpu = ["dep:wgpu", "dep:tokio", "dep:futures", "dep:naga", "dep:wgpu-core", "dep:bytemuck", "gpu"]
opencl = ["dep:ocl", "gpu"]
gpu = []
pina = []

[[bench]]
name = "gpu"
harness = false

[[bench]]
name = "cpu"
harness = false
